add data to create and update restaurant
